# ssb

./: .gitmodules  Cargo.toml  Makefile  README.md  default.nix  flake.nix  update_readme.sh
.github/workflows/: test.yml
src/: config.rs  main.rs  surface.rs  util.rs
src/modules/: audio.rs  backlight.rs  battery.rs  cpu.rs  cpu_usage.rs  custom.rs  hyprland.rs  memory.rs  mod.rs  network.rs  persistant_workspaces.rs  pulse.rs  title.rs  workspaces.rs
src/util/: helpers.rs  listeners.rs  mod.rs
